# MultiUserMultiTouchExercise

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Jenkinsfile  Main.cpp  README.md  README.md.md
Interface/: package.json  tsconfig.json
Interface/resources/: index.html
Interface/src/: index.ts  oscManager (conflicted copy 2024-03-21 191111).ts  oscManager.ts  oscReceiver.ts  preload.js
MUMT/: CMakeLists.txt  Doxyfile  README.md
MUMT/include/: Finger.hpp  Helpers.hpp  QuadTree.hpp  TUIOServerAdapter.hpp  Tracker.hpp
MUMT/source/: Finger.cpp  Helpers.cpp  QuadTree.cpp  TUIOServerAdapter.cpp  Tracker.cpp
docs/: README.md  annotated.html  annotated_dup.js  classes.html  dir_02042ae3ba2486ef80a59509c904bb17.html  dir_28c7fba84cf06eff87a6fa07767bae7c.js  dir_3f887fe56790f62c610d07f022fa72fa.html  dir_4c0b87f91c0aa481a261a319d4020850.html  dir_4c0b87f91c0aa481a261a319d4020850.js  dir_bb1a6b8d8ccc3700d1727ce75bcaa9bb.html  dir_bb1a6b8d8ccc3700d1727ce75bcaa9bb.js  dir_c5da75fdc1d6c57999112ed830c87a3c.html  dir_c5da75fdc1d6c57999112ed830c87a3c.js  dir_d50a7b4d96e4f191ff8632b7960afa9f.js  dir_fae2ded43b770bff30829ee9782df56e.html  doxygen.css  files_dup.js  functions_c.html  functions_d.html  functions_dup.js  functions_f.html  functions_func.html  functions_func.js  functions_func_d.html  functions_func_f.html  functions_func_g.html  functions_func_i.html  functions_func_l.html  functions_func_p.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_w.html  functions_g.html  functions_h.html  functions_n.html  functions_o.html  functions_s.html  functions_w.html  graph_legend.html  (+49 more)
docs/documentation/: dir_02042ae3ba2486ef80a59509c904bb17.js  dir_28c7fba84cf06eff87a6fa07767bae7c.html  dir_3253a320681ed5cc3e7c554399c0db9a.html  dir_3253a320681ed5cc3e7c554399c0db9a.js  dir_3f887fe56790f62c610d07f022fa72fa.js  dir_b11ca6cbfcfc58854d8e7d83ee6234e6.html  dir_b11ca6cbfcfc58854d8e7d83ee6234e6.js  dir_d50a7b4d96e4f191ff8632b7960afa9f.html  dir_d61be5ac93d1e5b03f9449fa0a4e08be.html  dir_d61be5ac93d1e5b03f9449fa0a4e08be.js  dir_fae2ded43b770bff30829ee9782df56e.js  files.html  functions.html  functions_b.html  functions_e.html  functions_func_b.html  functions_func_c.html  functions_func_e.html  functions_func_g.html  functions_func_n.html  functions_func_o.html  functions_func_q.html  functions_func_s.html  functions_func_u.html  functions_func_~.html  functions_g.html  functions_i.html  functions_l.html  functions_m.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_vars.html  functions_x.html  (+56 more)
(+897 files in other folders)
